--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
     <body>
         <div id="container"> <!--início container-->
             <header> <!-- início header-->
-
+                <div id="logo">
+                    <h1><a href="">Desdogmatizando</a></h1>
+                </div>
+                <nav>  <!--MENU NAVEGAÇÃO   -->   
+                    <ul class="menu">
+                        <li><a href="">Home</a></li>
+                        <li><a href="pg2.html">Textos</a></li>
+                        <li><a href="pg3.html">Vídeos</a></li>
+                        <li><a href="pg4.html">Fóruns</a></li>
+                        <li><a href="pg5.html">Fale Conosco</a></li>                
+                    </ul>
+                </nav> 
             </header> <!-- fim header-->
-            <nav>  <!--MENU NAVEGAÇÃO   -->   
-                <ul class="menu">
-                    <li><a href="">Home</a></li>
-                    <li><a href="pg2.html">Textos</a></li>
-                    <li><a href="pg3.html">Vídeos</a></li>
-                    <li><a href="pg4.html">Fóruns</a></li>
-                    <li><a href="pg5.html">Fale Conosco</a></li>                
-                </ul>
-            </nav> 
+            
         </div> <!--fim div container-->
 
         <!--
