--- a/bootstrap-5.2.2-dist/index.html
+++ b/bootstrap-5.2.2-dist/index.html
@@ -8,16 +8,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Desdogmatizando a Fé!</title>
   </head>
   <body>
          <div id="container"> <!--início container-->
             <header> <!-- início header-->
                 <div id="logo">
-                    <h1><a href="">Desdogmatizando</a></h1>
+                    <h1 class="text-center"><a href="">Desdogmatizando</a></h1>
                 </div>
                 <nav>  <!--MENU NAVEGAÇÃO   -->   
-                    <ul class="list-inline">
+                    <ul class="list-inline text-center">
                         <li class="list-inline-item"><a href="">Home</a></li>
                         <li class="list-inline-item"><a href="pg2.html">Textos</a></li>
                         <li class="list-inline-item"><a href="pg3.html">Vídeos</a></li>
