--- a/desdogmatizando/index.html
+++ b/desdogmatizando/index.html
@@ -47,8 +47,8 @@
             <div class="row">
               <div class="col-md-6 d-flex"> <!--início texto seção-->
                 <div class="align-self-center">
-                  <h1 class="display-4">Desdogmatizando a Fé</h1>
-                  <p>É necesário conhecer a Deus fora dos dogmas... vamos nessa caminhada!</p>
+                  <h1 class="display-4" mb-4 ml-4>Desdogmatizando a Fé</h1>
+                  <p>É necesário c3io conhecer a Deus fora dos dogmas É necesário conhecer a Deus fora dos dogmasÉ necesário conhecer a Deus fora dos dogmas... vamos nessa caminhada!</p>
                   
                   <form class="mt-4 mb-4">
                     <div class="input-group">
@@ -61,9 +61,9 @@
                   </form>
 
                 </div>
-              </div> <!--fim texto seção-->
+              </div> <!--fim texto section -->
               <div  class="col-md-6">
-                <img src="img/pregador.jpg">
+                <img src="img/pregador.jpg" >
               </div>
               
             </div>
