--- a/desdogmatizando/index.html
+++ b/desdogmatizando/index.html
@@ -44,11 +44,11 @@
     
     <section id="home"> <!-- abertura section -->
         <div class="container"> <!-- abertura CONTAINER-->
-            <div class="row">
+            <div class="row justify-content-around">
               <div class="col-md-6 d-flex bg-primary p-5"> <!--início texto seção-->
                 <div class="align-self-center">
                   <h1 class="display-4" mb-4 ml-4>Desdogmatizando a Fé</h1>
-                  <p>É necesário  conhecer a Deus fora dos dogmas É necesário conhecer a Deus fora dos dogmasÉ necesário conhecer a Deus fora dos dogmas... vamos nessa caminhada!</p>
+                  <p>É necesário  conhecer a Deus fora dos dogmas É necesário conhecer a Deus fora dos dogmas É necesário conhecer a Deus fora dos dogmas... vamos nessa caminhada!</p>
                   
                   <form class="mt-4 mb-4">
                     <div class="input-group">
